# OS_labs

lab1OS/: CMakeLists.txt  strace.txt
lab1OS/include/: systemCall.h
lab1OS/src/: child1.cpp  child2.cpp  parent.cpp  systemCall.cpp
report_OS/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
report_OS/styles/: log-style.sty
